packages/forge-dsl/fixtures/errors/e07-condition-not-bool.fable
// expect: FORGE302
VAR coins = 5

-> toll
=== toll ===
{coins: You can pay.|Empty pockets.}
* {coins} Pay the toll.
  -> END
+ Argue instead.
  -> END
